--- a/src/view/AjoutAgent.fxml
+++ b/src/view/AjoutAgent.fxml
@@ -21,17 +21,26 @@
     <TextField fx:id="numCP" layoutX="351.0" layoutY="378.0" prefWidth="200.0" />
     <Label layoutX="263.0" layoutY="223.0" text="Nom" />
     <Label layoutX="254.0" layoutY="274.0" text="Prénom" />
-    <Label layoutX="220.0" layoutY="328.0" text="Date de naissance" />
+    <Label layoutX="235.0" layoutY="328.0" text="Pôle / Service" />
     <Label layoutX="260.0" layoutY="381.0" text="N° CP" />
     <TextField id="numPost" fx:id="numPoste" layoutX="351.0" layoutY="428.0" prefWidth="200.0" />
     <Label layoutX="241.0" layoutY="431.0" text="N° de poste" />
     <Button layoutX="563.0" layoutY="428.0" mnemonicParsing="false" onAction="#selectionPoste" text="Rechercher le poste" />
     <Button layoutX="422.0" layoutY="495.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
-    <DatePicker fx:id="dateNaiss" layoutX="354.0" layoutY="323.0" prefHeight="31.0" prefWidth="200.0" />
     <Label fx:id="msgAjoutOk" layoutX="326.0" layoutY="539.0" prefHeight="21.0" prefWidth="248.0" text="Nouvel agent ajouté avec succès !" textAlignment="CENTER" textFill="#0db915" visible="false">
       <font>
         <Font name="System Bold" size="15.0" />
       </font>
     </Label>
+    <Button layoutX="563.0" layoutY="327.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="+" />
+    <ComboBox fx:id="pole" layoutX="351.0" layoutY="326.0" prefWidth="200.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ComboBox>
   </children>
 </AnchorPane>
