--- a/src/view/AjoutAgentPopup.fxml
+++ b/src/view/AjoutAgentPopup.fxml
@@ -7,29 +7,39 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" minHeight="641.0" prefHeight="641.0" prefWidth="718.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutAgent">
+<AnchorPane fx:id="bodyPanel" minHeight="641.0" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutAgent">
   <children>
     <Label layoutX="262.0" layoutY="31.0" text="Ajouter un nouvel agent">
       <font>
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <TextField id="name" fx:id="nom" layoutX="269.0" layoutY="166.0" prefWidth="200.0" />
-    <TextField fx:id="prenom" layoutX="269.0" layoutY="217.0" prefWidth="200.0" />
-    <TextField fx:id="numCP" layoutX="269.0" layoutY="324.0" prefWidth="200.0" />
-    <Label layoutX="181.0" layoutY="169.0" text="Nom" />
-    <Label layoutX="172.0" layoutY="220.0" text="Prénom" />
-    <Label layoutX="138.0" layoutY="274.0" text="Date de naissance" />
-    <Label layoutX="178.0" layoutY="327.0" text="N° CP" />
-    <TextField id="numPost" fx:id="numPoste" layoutX="269.0" layoutY="374.0" prefWidth="200.0" />
-    <Label layoutX="159.0" layoutY="377.0" text="N° de poste" />
-    <Button layoutX="481.0" layoutY="374.0" mnemonicParsing="false" onAction="#selectionPoste" text="Rechercher le poste" />
-    <Button layoutX="334.0" layoutY="587.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
-    <DatePicker fx:id="dateNaiss" layoutX="269.0" layoutY="269.0" prefHeight="31.0" prefWidth="200.0" />
-      <Label fx:id="msgAjoutOk" layoutX="244.0" layoutY="485.0" prefHeight="21.0" prefWidth="250.0" text="Nouvel agent ajouté avec succès !" textAlignment="CENTER" textFill="#0db915" visible="false">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Label>
+    <Button id="btnEditDelete" layoutX="349.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des agents" />
+    <TextField id="name" fx:id="nom" layoutX="351.0" layoutY="220.0" prefWidth="200.0" />
+    <TextField fx:id="prenom" layoutX="351.0" layoutY="271.0" prefWidth="200.0" />
+    <TextField fx:id="numCP" layoutX="351.0" layoutY="378.0" prefWidth="200.0" />
+    <Label layoutX="263.0" layoutY="223.0" text="Nom" />
+    <Label layoutX="254.0" layoutY="274.0" text="Prénom" />
+    <Label layoutX="235.0" layoutY="328.0" text="Pôle / Service" />
+    <Label layoutX="260.0" layoutY="381.0" text="N° CP" />
+    <TextField id="numPost" fx:id="numPoste" layoutX="351.0" layoutY="428.0" prefWidth="200.0" />
+    <Label layoutX="241.0" layoutY="431.0" text="N° de poste" />
+    <Button layoutX="563.0" layoutY="428.0" mnemonicParsing="false" onAction="#selectionPoste" text="Rechercher le poste" />
+    <Button layoutX="422.0" layoutY="495.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
+    <Label fx:id="msgAjoutOk" layoutX="326.0" layoutY="539.0" prefHeight="21.0" prefWidth="248.0" text="Nouvel agent ajouté avec succès !" textAlignment="CENTER" textFill="#0db915" visible="false">
+      <font>
+        <Font name="System Bold" size="15.0" />
+      </font>
+    </Label>
+    <Button layoutX="563.0" layoutY="327.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="+" />
+    <ComboBox fx:id="pole" layoutX="351.0" layoutY="326.0" prefWidth="200.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ComboBox>
   </children>
 </AnchorPane>
