--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -13,42 +13,44 @@
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <TextField fx:id="numPoste" layoutX="208.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextField fx:id="numPoste" layoutX="188.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="58.0" layoutY="198.0" text="N° d'équipement" />
     <Label layoutX="81.0" layoutY="260.0" text="Valeur (€)" />
-    <TextField fx:id="prix" layoutX="208.0" layoutY="255.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextField fx:id="prix" layoutX="188.0" layoutY="255.0" prefHeight="31.0" prefWidth="200.0" />
     <Button fx:id="btnEditDelete" layoutX="341.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des équipements" />
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
-    <TextField fx:id="nbJoursPrev" layoutX="625.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
-    <Label layoutX="436.0" layoutY="201.0" text="Jours avant renouvellement" />
-    <AnchorPane fx:id="sectionLogiciel" layoutX="40.0" layoutY="499.0" prefHeight="152.0" prefWidth="824.0">
+    <TextField fx:id="nbJoursPrev" layoutX="637.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
+    <Label layoutX="448.0" layoutY="201.0" text="Jours avant renouvellement" />
+    <AnchorPane fx:id="sectionLogiciel" layoutX="37.0" layoutY="505.0" prefHeight="152.0" prefWidth="824.0">
       <children>
-        <ListView fx:id="lstLogiciel" layoutX="169.0" layoutY="14.0" prefHeight="108.0" prefWidth="200.0" />
-        <Button fx:id="btnSelectLogiciels" layoutX="389.0" layoutY="14.0" mnemonicParsing="false" onAction="#selectionLogiciels" prefHeight="31.0" prefWidth="138.0" text="Sélection logiciels" />
-        <Label layoutX="37.0" layoutY="32.0" text="Logiciels" />
-        <Button layoutX="536.0" layoutY="19.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="+" />
+        <ListView fx:id="lstLogiciel" layoutX="149.0" layoutY="14.0" prefHeight="108.0" prefWidth="200.0" />
+        <Button fx:id="btnSelectLogiciels" layoutX="357.0" layoutY="14.0" mnemonicParsing="false" onAction="#selectionLogiciels" prefHeight="31.0" prefWidth="138.0" text="Sélection logiciels" />
+        <Label layoutX="37.0" layoutY="24.0" text="Logiciels" />
+        <Button layoutX="502.0" layoutY="19.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="+" />
       </children>
     </AnchorPane>
-    <Button fx:id="btnEnregistrer" layoutX="398.0" layoutY="676.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
+    <Button fx:id="btnEnregistrer" layoutX="400.0" layoutY="700.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
     <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement" />
     <ComboBox fx:id="typeEquipement" editable="true" layoutX="427.0" layoutY="128.0" prefHeight="31.0" prefWidth="200.0" />
-    <Label layoutX="74.0" layoutY="419.0" text="N° CP Agent" />
-    <TextField fx:id="numCPAgent" editable="false" layoutX="209.0" layoutY="416.0" prefHeight="31.0" prefWidth="200.0" />
-    <Button fx:id="btnSelectAgent" layoutX="432.0" layoutY="416.0" mnemonicParsing="false" onAction="#selectionAgent" prefHeight="31.0" prefWidth="128.0" text="Sélection Agent" />
-    <Button layoutX="568.0" layoutY="421.0" mnemonicParsing="false" onAction="#ajoutAgent" text="+" />
-    <CheckBox fx:id="logicielsOuiNon" layoutX="242.0" layoutY="472.0" mnemonicParsing="false" text="Logiciels associés" />
+    <Label layoutX="71.0" layoutY="425.0" text="N° CP Agent" />
+    <TextField fx:id="numCPAgent" editable="false" layoutX="186.0" layoutY="422.0" prefHeight="31.0" prefWidth="200.0" />
+    <Button fx:id="btnSelectAgent" layoutX="395.0" layoutY="422.0" mnemonicParsing="false" onAction="#selectionAgent" prefHeight="31.0" prefWidth="128.0" text="Sélection Agent" />
+    <Button layoutX="528.0" layoutY="427.0" mnemonicParsing="false" onAction="#ajoutAgent" text="+" />
+    <CheckBox fx:id="logicielsOuiNon" layoutX="239.0" layoutY="478.0" mnemonicParsing="false" text="Logiciels associés" />
     <Label fx:id="msgAjoutOk" layoutX="217.0" layoutY="568.0" prefHeight="23.0" prefWidth="453.0" text="Nouvel équipement ajouté avec succès !" textFill="#0db915" visible="false">
       <font>
         <Font name="System Bold" size="15.0" />
       </font>
     </Label>
-    <Label layoutX="488.0" layoutY="263.0" text="Nom Calife" />
-    <TextField fx:id="calife" layoutX="625.0" layoutY="255.0" prefHeight="31.0" prefWidth="200.0" />
+    <Label layoutX="500.0" layoutY="263.0" text="Nom Calife" />
+    <TextField fx:id="calife" layoutX="637.0" layoutY="255.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="87.0" layoutY="317.0" text="Marque" />
-    <TextField fx:id="marque" layoutX="208.0" layoutY="312.0" prefHeight="31.0" prefWidth="200.0" />
-    <Label layoutX="500.0" layoutY="320.0" text="Modèle" />
-    <TextField fx:id="modele" layoutX="625.0" layoutY="312.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextField fx:id="marque" layoutX="188.0" layoutY="312.0" prefHeight="31.0" prefWidth="200.0" />
+    <Label layoutX="512.0" layoutY="320.0" text="Modèle" />
+    <TextField fx:id="modele" layoutX="637.0" layoutY="312.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="58.0" layoutY="373.0" text="Date fin garantie" />
     <DatePicker fx:id="dateGarantie" layoutX="208.0" layoutY="366.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextArea fx:id="info" layoutX="639.0" layoutY="372.0" prefHeight="266.0" prefWidth="200.0" wrapText="true" />
+    <Label layoutX="476.0" layoutY="373.0" text="Autres informations" />
   </children>
 </AnchorPane>
