--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -14,7 +14,8 @@
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="N° d'équipement" fx:id="columnNumero" />
         <TableColumn prefWidth="75.0" text="Valeur (€)" fx:id="columnPrix" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" fx:id="columnAgent" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="370.0" text="Logiciel(s) installé(s)" fx:id="columnLogiciels" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Type" fx:id="columnType" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Nom Calife" fx:id="columnCalife" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" fx:id="columnModifier"/>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" fx:id="columnSupprimer"/>
       </columns>
