--- a/src/view/GestionLogiciel.fxml
+++ b/src/view/GestionLogiciel.fxml
@@ -11,9 +11,9 @@
     <Button layoutX="373.0" layoutY="28.0" mnemonicParsing="false" onAction="#displayAddLogiciel" text="Ajouter des logiciels" />
     <TableView fx:id="tableLogiciel" layoutY="172.0" prefHeight="380.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="438.0" text="Libelle logiciel" fx:id="columnLibelle" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="238.0" text="Libelle logiciel" fx:id="columnLibelle" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Valeur licence (€)" fx:id="columnPrix" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="Durée licence" fx:id="columnDuree" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="307.0" text="N° licence" fx:id="columnLicenceNumber" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" fx:id="columnModifier"/>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" fx:id="columnSupprimer"/>
       </columns>
