modifs ajoutEquipement - ajout controle formulaire - gestion type dans configuration

--- a/src/view/Accueil.fxml
+++ b/src/view/Accueil.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1100.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.Accueil">
+<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Accueil">
   <children>
-    <AnchorPane fx:id="menuPanel" prefHeight="800.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="900.0" AnchorPane.topAnchor="0.0">
+    <AnchorPane fx:id="menuPanel" prefHeight="750.0" prefWidth="203.0" style="-fx-background-color: #FFFFFF" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="897.0" AnchorPane.topAnchor="0.0">
       <children>
-        <Button id="btnAjoutEquip" layoutX="8.0" layoutY="177.0" mnemonicParsing="false" onAction="#equipementGest" prefWidth="184.0" text="Gestion des équipements" />
+        <Button id="btnAjoutEquip" layoutX="3.0" layoutY="176.0" mnemonicParsing="false" onAction="#equipementGest" prefHeight="31.0" prefWidth="195.0" text="Gestion des équipements" />
         <Button id="btnLogicielGest" layoutX="8.0" layoutY="233.0" mnemonicParsing="false" onAction="#logicielGest" prefWidth="184.0" text="Gestion des logiciels" />
         <Button id="btnAgentGest" layoutX="8.0" layoutY="290.0" mnemonicParsing="false" onAction="#agentGest" prefWidth="184.0" text="Gestion des agents" />
         <Button id="btnStatPrev" layoutX="8.0" layoutY="347.0" mnemonicParsing="false" onAction="#statPrev" prefWidth="184.0" text="Statistiques/Prévisions" />
