--- a/src/view/Configuration.fxml
+++ b/src/view/Configuration.fxml
@@ -50,7 +50,7 @@
                 <Button layoutX="241.0" layoutY="31.0" mnemonicParsing="false" onAction="#deleteType" prefHeight="31.0" prefWidth="74.0" text="Suppr" />
                 <TextField fx:id="textFieldType" layoutX="274.0" layoutY="136.0" prefWidth="177.0" />
                         <Label layoutX="319.0" layoutY="115.0" text="Nom du type" />
-                        <Label layoutX="242.0" layoutY="194.0" text="Renouvellement en nombre de mois" />
+                        <Label layoutX="242.0" layoutY="194.0" text="Durée avant renouvellement (en années)" />
                         <TextField fx:id="textFieldNbMonth" layoutX="273.0" layoutY="224.0" prefHeight="31.0" prefWidth="180.0" />
                         <Button layoutX="330.0" layoutY="285.0" mnemonicParsing="false" onAction="#saveType" text="Ajout" />
               </children>
