colonne date de garantie

--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -31,7 +31,7 @@
     <Label layoutX="75.0" layoutY="428.0" text="N° CP Agent" />
     <TextField fx:id="numCPAgent" editable="false" layoutX="188.0" layoutY="421.0" prefHeight="31.0" prefWidth="200.0" />
     <Button fx:id="btnSelectAgent" layoutX="391.0" layoutY="421.0" mnemonicParsing="false" onAction="#selectionAgent" prefHeight="31.0" prefWidth="128.0" text="Sélection Agent" />
-    <Button layoutX="529.0" layoutY="421.0" mnemonicParsing="false" onAction="#ajoutAgent" prefHeight="31.0" prefWidth="31.0" text="+" />
+    <Button fx:id="ajoutAgent" layoutX="529.0" layoutY="421.0" mnemonicParsing="false" onAction="#ajoutAgent" prefHeight="31.0" prefWidth="31.0" text="+" />
     <CheckBox fx:id="logicielsOuiNon" layoutX="185.0" layoutY="513.0" mnemonicParsing="false" text="Logiciels associés" />
     <Label layoutX="78.0" layoutY="201.0" text="Nom Calife" />
     <TextField fx:id="calife" layoutX="188.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
