--- a/src/view/GestionAgent.fxml
+++ b/src/view/GestionAgent.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionAgent">
+<AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="750.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionAgent">
   <children>
-    <Label layoutX="313.0" layoutY="92.0" text="Modifier/Supprimer des agents">
+    <Label layoutX="313.0" layoutY="91.0" text="Modifier/Supprimer des agents">
       <font>
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <Separator layoutY="78.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-    <Button id="btnEditDelete" layoutX="380.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddAgent" text="Ajouter des agents" />
-    <TableView fx:id="searchTab" layoutY="172.0" prefHeight="380.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
+    <Separator layoutY="75.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+    <Button id="btnEditDelete" layoutX="362.0" layoutY="25.0" mnemonicParsing="false" onAction="#displayAddAgent" prefHeight="21.0" prefWidth="181.0" text="Ajouter des agents" />
+    <TableView fx:id="searchTab" layoutY="172.0" prefHeight="492.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="192.0" text="Nom" fx:id="nomCol" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="150.0" text="Prénom" fx:id="prenomCol" />
@@ -28,14 +28,14 @@
     </TableView>
     <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
     <Button fx:id="searchButton" layoutX="738.0" layoutY="134.0" mnemonicParsing="false" onAction="#searchAgent" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
-    <MenuButton id="exportButton" layoutX="725.0" layoutY="43.0" mnemonicParsing="false" text="Exporter" textAlignment="CENTER">
+    <MenuButton id="exportButton" layoutX="747.0" layoutY="43.0" mnemonicParsing="false" text="Exporter" textAlignment="CENTER">
       <items>
         <MenuItem mnemonicParsing="false" onAction="#exportTablePDF" text="PDF" />
         <MenuItem mnemonicParsing="false" onAction="#exportTableExcel" text="Excel" />
       </items>
     </MenuButton>
-    <Button layoutX="616.0" layoutY="26.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" />
-    <Button fx:id="buttonNext" layoutX="472.0" layoutY="570.0" mnemonicParsing="false" onAction="#viewMore" text="Suivant" textAlignment="CENTER" />
-    <CheckBox fx:id="checkBoxExportTable" layoutX="725.0" layoutY="14.0" mnemonicParsing="false" text="Exporter le tableau" />
+    <Button layoutX="613.0" layoutY="25.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" />
+    <Button fx:id="buttonNext" layoutX="398.0" layoutY="699.0" mnemonicParsing="false" onAction="#viewMore" text="Page suivante" textAlignment="CENTER" />
+    <CheckBox fx:id="checkBoxExportTable" layoutX="747.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
   </children>
 </AnchorPane>
