--- a/src/view/RechercheEquipement.fxml
+++ b/src/view/RechercheEquipement.fxml
@@ -17,7 +17,7 @@
       </columns>
     </TableView>
     <TextField layoutX="29.0" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Champ de recherche" />
-    <Label layoutX="256.0" layoutY="42.0" text="Recherche d'équipements (liés à aucun agent)">
+    <Label layoutX="341.0" layoutY="44.0" text="Recherche d'équipements">
       <font>
         <Font name="System Bold" size="18.0" />
       </font>
