--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="820.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutEquipement">
+<AnchorPane fx:id="bodyPanel" prefHeight="820.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutEquipement">
   <children>
     <Label layoutX="373.0" layoutY="85.0" text="Nouvel équipement">
       <font>
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <Label layoutX="532.0" layoutY="307.0" text="Valeur (€)" />
+    <Label layoutX="519.0" layoutY="307.0" text="Valeur (€)" />
     <Button fx:id="btnEditDelete" layoutX="341.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des équipements" />
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
     <ComboBox fx:id="typeEquipement" layoutX="427.0" layoutY="128.0" prefHeight="31.0" prefWidth="200.0">
@@ -28,37 +28,37 @@
     <TextField fx:id="modele" layoutX="187.0" layoutY="302.0" prefHeight="31.0" prefWidth="200.0" />
     <DatePicker fx:id="dateLivraison" layoutX="637.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
     <DatePicker fx:id="dateGarantie" layoutX="637.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
-    <TextArea fx:id="info" layoutX="649.0" layoutY="505.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
+    <TextArea fx:id="info" layoutX="637.0" layoutY="491.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
     <Button fx:id="btnEnregistrer" layoutX="402.0" layoutY="700.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
     <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement" />
-    <Label layoutX="25.0" layoutY="384.0" text="N° CP Agent" />
+    <Label layoutX="73.0" layoutY="382.0" text="N° CP Agent" />
     <Label layoutX="78.0" layoutY="201.0" text="Nom Calife" />
     <Label layoutX="87.0" layoutY="252.0" text="Marque" />
     <Label layoutX="88.0" layoutY="307.0" text="Modèle" />
     <Label layoutX="495.0" layoutY="252.0" text="Date fin garantie" />
-    <Label layoutX="672.0" layoutY="475.0" text="Autres informations" />
+    <Label layoutX="672.0" layoutY="472.0" text="Autres informations" />
     <Label layoutX="506.0" layoutY="201.0" text="Date livraison" />
-      <TextField fx:id="numCPAgent" editable="false" layoutX="138.0" layoutY="379.0" prefHeight="31.0" prefWidth="200.0" />
-      <Button layoutX="238.0" layoutY="416.0" mnemonicParsing="false" onAction="#ajoutAgent" text="Nouveau" />
-      <Button layoutX="147.0" layoutY="416.0" mnemonicParsing="false" onAction="#selectAgent" text="Selection" />
-      <ListView fx:id="lstLogiciel" layoutX="185.0" layoutY="511.0" prefHeight="108.0" prefWidth="200.0" />
-      <Label layoutX="64.0" layoutY="521.0" text="Logiciels" />
-      <Button layoutX="395.0" layoutY="516.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
-      <Button layoutX="396.0" layoutY="550.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="Nouveau" />
-      <Button layoutX="637.0" layoutY="128.0" mnemonicParsing="false" onAction="#addTypeEquipement" text="Nouveau" />
-      <Label layoutX="408.0" layoutY="384.0" text="ou">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="poles" layoutX="598.0" layoutY="379.0" prefWidth="200.0">
-         <items>
-            <FXCollections fx:factory="observableArrayList" />
-         </items>
-      </ComboBox>
-      <Label layoutX="477.0" layoutY="384.0" text="Pôle / Service" />
-      <Separator layoutY="345.0" prefHeight="3.0" prefWidth="900.0" />
-      <Separator layoutX="4.0" layoutY="462.0" prefWidth="900.0" />
-      <Button layoutX="811.0" layoutY="379.0" mnemonicParsing="false" onAction="#addPole" text="Nouveau" />
+    <TextField fx:id="numCPAgent" editable="false" layoutX="188.0" layoutY="373.0" prefHeight="31.0" prefWidth="200.0" />
+    <Button layoutX="308.0" layoutY="410.0" mnemonicParsing="false" onAction="#ajoutAgent" text="Nouveau" />
+    <Button layoutX="188.0" layoutY="410.0" mnemonicParsing="false" onAction="#selectAgent" text="Selection" />
+    <ListView fx:id="lstLogiciel" layoutX="188.0" layoutY="511.0" prefHeight="108.0" prefWidth="200.0" />
+    <Label layoutX="86.0" layoutY="521.0" text="Logiciels" />
+    <Button layoutX="395.0" layoutY="516.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
+    <Button layoutX="396.0" layoutY="550.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="Nouveau" />
+    <Button layoutX="637.0" layoutY="128.0" mnemonicParsing="false" onAction="#addTypeEquipement" text="Nouveau" />
+    <Label layoutX="420.0" layoutY="381.0" text="et / ou">
+      <font>
+        <Font name="System Bold" size="15.0" />
+      </font>
+    </Label>
+    <ComboBox fx:id="poles" layoutX="637.0" layoutY="379.0" prefWidth="200.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList" />
+      </items>
+    </ComboBox>
+    <Label layoutX="505.0" layoutY="382.0" text="Pôle / Service" />
+    <Separator layoutY="345.0" prefHeight="3.0" prefWidth="900.0" />
+    <Separator layoutX="4.0" layoutY="462.0" prefWidth="900.0" />
+    <Button layoutX="849.0" layoutY="379.0" mnemonicParsing="false" onAction="#addPole" text="+" />
   </children>
 </AnchorPane>
